jellyfin-ffmpeg (5.1.3-1) unstable; urgency=medium

  * New upstream version 5.1.3
  * Add a tone-mapping mode RGB in CUDA & OpenCL
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 27 Mar 2023 22:41:38 +0800

jellyfin-ffmpeg (5.1.2-9) unstable; urgency=medium

  * Fix a typo in the patch
  * Update dependencies
  * Enable Debian bookworm and Ubuntu lunar
  * Fix the empty output in webvtt transcoding

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 3 Mar 2023 19:15:27 +0800

jellyfin-ffmpeg (5.1.2-8) unstable; urgency=medium

  * Remove the changed vulkan video extensions
  * Don't fail on missing vulkan drm modifiers
  * Prefer Vulkan device with higer API version
  * Default to use complex font shaping in libass
  * Add fixes for VAAPI-DRM-Vulkan tearing
  * Add fixes for the incorrect null terminator in assenc
  * Skip loading plugins on VPL runtime
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 15 Feb 2023 22:52:17 +0800

jellyfin-ffmpeg (5.1.2-7) unstable; urgency=medium

  * Enable zero-copy dovi buffer on Intel dGPU
  * Improve scaling speed for VAAPI and QSV
  * Fix the tone-mapping FPS regression on Pascal
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Tue, 17 Jan 2023 22:33:03 +0800

jellyfin-ffmpeg (5.1.2-6) unstable; urgency=medium

  * Fix onevpl loading in linux portable build
  * Fix VAAPI PGS subtitle burn-in on DG2
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 23 Dec 2022 21:15:31 +0800

jellyfin-ffmpeg (5.1.2-5) unstable; urgency=medium

  * Optimize dovi buffer access, mainly on Intel
  * Add HDR metadata support for QSV/NVENC HEVC encoder
  * Add 10bit overlay support for QSV/CUDA/OpenCL
  * Add DOVI to HDR support for CUDA/OpenCL
  * Add D3D11VA/DXVA2 HEVC 422 444 8-12 bits decoding on Intel
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 07 Oct 2022 21:31:17 +0800

jellyfin-ffmpeg (5.1.2-4) unstable; urgency=medium
