@@ -319,6 +319,25 @@ make -j$(nproc)
 make install
 popd
 
+# OPENMPT
+mkdir mpt
+pushd mpt
+mpt_ver="0.6.9"
+mpt_link="https://lib.openmpt.org/files/libopenmpt/src/libopenmpt-${mpt_ver}+release.autotools.tar.gz"
+wget ${mpt_link} -O mpt.tar.gz
+tar xaf mpt.tar.gz
+pushd libopenmpt-${mpt_ver}+release.autotools
+./configure \
+    --prefix=${FF_DEPS_PREFIX} \
+    --host=${FF_TOOLCHAIN} \
+    --enable-static \
+    --disable-{shared,examples,tests,openmpt123} \
+    --without-{mpg123,portaudio,portaudiocpp,sndfile,flac}
+make -j$(nproc)
+make install
+popd
+popd
+
 # LIBWEBP
 git clone -b v1.2.3 --depth=1 https://chromium.googlesource.com/webm/libwebp
 pushd libwebp
@@ -590,6 +609,7 @@ fi
     --enable-libopus \
     --enable-libtheora \
     --enable-libvorbis \
+    --enable-libopenmpt \
     --enable-libwebp \
     --enable-libvpx \
     --enable-libzimg \
