@@ -3,6 +3,7 @@ jellyfin-ffmpeg (5.1.3-1) unstable; urgency=medium
   * New upstream version 5.1.3
   * Add a tone-mapping mode RGB in CUDA & OpenCL
   * Update dependencies
+  * Enable libopenmpt
 
  -- nyanmisaka <nst799610810@gmail.com>  Mon, 27 Mar 2023 22:41:38 +0800
 
